# riphttplib

./: .gitignore  Cargo.toml  README.md  todo
examples/: client.rs  client2.rs  client3.rs  cont_flood.rs  h1_basic.rs  h1_string_body_demo.rs  h1_trailers_demo.rs  h2_advanced_features.rs  h2_basic.rs  h2_basic_demo.rs  h2_frame_batch.rs  h2_resp_splitting.rs  h3_advanced_features.rs  h3_basic.rs  h3_google_demo.rs  haproxy.rs  haproxyh3.rs  keepalive.rs  made_you_reset.rs  protocol_detector.rs  proxy.rs  proxy_example.rs  rapid_reset.rs  raw_h1.rs  raw_h2.rs  raw_h3.rs  request_features.rs  send_raw.rs  session.rs  simple_request.rs  test.rs
examples.bak/: h3_google_demo.rs
src/: connection.rs  detector.rs  lib.rs  proxy.rs  session.rs  stream.rs  types.rs  utils.rs
src/h1/: client.rs  connection.rs  mod.rs  protocol.rs
src/h2/: client.rs  connection.rs  consts.rs  framing.rs  hpack.rs  mod.rs  protocol.rs
src/h2/connection/: state.rs
src/h2/framing/: rst.rs
src/h3/: client.rs  connection.rs  consts.rs  framing.rs  mod.rs  protocol.rs  qpack.rs
src/h3/connection/: state.rs
src/types/: cookie.rs  error.rs  frame.rs  header.rs  mod.rs  protocol.rs  proxy.rs  request.rs  response.rs  target.rs  timeouts.rs
src/types/protocol/: client.rs  client_request.rs  mod.rs
tests/: test_framing_api.rs  test_framing_serialization.rs  test_h1_client.rs  test_h3.rs  test_parse_target.rs  test_request.rs  test_utils.rs
tests/types/: request.rs
