[package]
name = "riphttplib"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "=0.11.9"
rustls = { version = "0.23.32", features = ["ring"] }
tokio = { version = "1.47.1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-rustls = "0.26.4"
bytes = "1.0"
url = "2.0"
async-trait = "0.1"
webpki-roots = "0.26"
hpack = "0.3.0"
ls-qpack-rs = "0.2.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[bench]]
name = "request_benchmarks"
harness = false

[[bench]]
name = "client_benchmarks"
harness = false

[[bench]]
name = "serialization_benchmarks"
harness = false
